--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,25 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preload" href="styles.css" as="style" />
+  <link rel="preload" href="assets/images/landing/main-photo.jpg" as="image" />
+  <link rel="preload" href="draw-b4.ttf?a8uv55" as="font" type="font/ttf" crossorigin="anonymous" />
+  <link rel="preload" href="https://fonts.gstatic.com/s/opensans/v18/mem8YaGs126MiZpBA-UFVZ0b.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+  <link rel="preload" href="https://fonts.gstatic.com/s/opensans/v18/mem5YaGs126MiZpBA-UN7rgOUuhp.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+  <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+  <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_ZpC3gnD_g.woff2"  as="font" type="font/woff2" crossorigin="anonymous" />
+  <link rel="stylesheet" href="styles.css" defer />
   <meta charset="utf-8">
   <title>UX Stencil</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
