--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="styles.css?v=1" defer />
   <meta charset="utf-8">
   <title>UX Stencil</title>
+  <meta name="description" content="UX Stencil">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
