--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <meta name="google-site-verification" content="rr4_dBrmRPT0AyEaCER43w4lu14OV1pe5AmyjFg0098" />
 </head>
 
 <body>
