--- a/src/index.original.html
+++ b/src/index.original.html
@@ -15,7 +15,7 @@
   <title>UX Stencil</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icons/favicon.svg">
 
   <meta name="google-site-verification" content="rr4_dBrmRPT0AyEaCER43w4lu14OV1pe5AmyjFg0098" />
 </head>
