--- a/src/index.original.html
+++ b/src/index.original.html
@@ -9,13 +9,14 @@
   <link rel="preload" href="https://fonts.gstatic.com/s/opensans/v18/mem8YaGs126MiZpBA-UFVZ0b.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
   <link rel="preload" href="https://fonts.gstatic.com/s/opensans/v18/mem5YaGs126MiZpBA-UN7rgOUuhp.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
   <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-  <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_ZpC3gnD_g.woff2"  as="font" type="font/woff2" crossorigin="anonymous" />
+  <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_ZpC3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
   <link rel="stylesheet" href="styles.css?v=1" defer />
   <meta charset="utf-8">
   <title>UX Stencil</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/icons/favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="alternate icon" sizes="32x32" href="favicon.ico">
 
   <meta name="google-site-verification" content="rr4_dBrmRPT0AyEaCER43w4lu14OV1pe5AmyjFg0098" />
 </head>
