1. Updated email template. 2. Updated order block.

--- a/src/email-template.html
+++ b/src/email-template.html
@@ -1,20 +1,39 @@
-<div>
-    <div style="width: 375px; margin: 30px auto">
-        <div>
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <style type="text/css">
+        #mail-body {
+            max-width: 375px;
+            padding-left: 18px;
+            padding-right: 36px;
+        }
+
+        @media (min-width: 700px) {
+            #main-block {
+                display: flex;
+            }
+
+            #mail-body {
+                max-width: 600px;
+            }
+        }
+    </style>
+</head>
+
+<body style="outline: 0; width: 100%; min-width: 100%; height: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; color: #000000; margin: 0; padding: 0; border: 0;" bgcolor="#ffffff">
+    <div id="main-block">
+        <div style="width: 375px;">
             <img src="http://ux-stencil.net/assets/images/gallery/new-stencil.jpg" />
         </div>
-        <div style="padding-left: 18px; padding-right: 36px;">
-            <div style="color: #E5E5E5; font-family: Montserrat; font-weight: 500; font-size: 11px; padding-top: 30px; padding-bottom: 5px;">
-                一 Thank you letter
-            </div>
-            <h1 style="font-family: Arvo; font-weight: 700; color: #000; letter-spacing: 0.06em;">
-                UX Stencil Is
-                <br />
+        <div id="mail-body">
+            <h1 style="font-family: Arvo; font-weight: 700; color: #000; letter-spacing: 0.06em;" style="font-size: 48px;">
                 <span style="display: inline-block; background-color: #B4E9F7;">
-                    Available Again!
-                </span>🎉
+                    UX Stencil
+                </span>
+                is available again!&nbsp;🎉
             </h1>
-            <div style="font-size: 11px; font-family: 'Open Sans'; font-weight: 400; color: black">
+            <div style="font-size: 18px; line-height: 32px; font-family: 'Open Sans'; font-weight: 300; color: #383B41; text-align: justify;">
                 <p>
                     Hello there!
                 </p>
@@ -22,10 +41,10 @@
                     Thank you for your patience and we are happy to share great news with you! 😀
                 </p>
                 <p>
-                    A limited collection of <a href="http://ux-stencil.net/">UX stencils</a> is available for purchase!
+                    A limited collection of <a style="color: #09A0D4; text-decoration: none; font-weight: 600;" href="http://ux-stencil.net/">UX stencils</a> is available for purchase!
                 </p>
                 <p>
-                    If you want to buy a stencil please feel in the <a href="http://ux-stencil.net#order-block">google form</a> below so that we could create a Payoneer invoice for you. After we get your reply in google forms we will send you an email with an invoice (shipping is included).
+                    If you want to buy a stencil please feel in the <a style="color: #09A0D4; text-decoration: none; font-weight: 600;" href="http://ux-stencil.net#order-block">google form</a> so that we could create a Payoneer invoice for you. After we get your reply in google forms we will send you an email with an invoice. Price for shipment is included.
                 </p>
                 <p>
                     We are excited to hear from you!
@@ -33,9 +52,11 @@
                     UX Stencil Team
                 </p>
             </div>
-            <div style="margin-top: 50px; margin-bottom: 50px; text-align: center;">
-                <a href="http://ux-stencil.net#order-block" style="color: white; background-color: #333333; padding: 22px 32px; text-decoration: none; font-family: Montserrat; font-size: 12px; border-radius: 100px; letter-spacing: 0.06em; font-weight: 700;">ORDER A SETENCIL</a>
+            <div style="margin-top: 50px; margin-bottom: 50px;">
+                <a href="http://ux-stencil.net#order-block" style="color: white; background-color: #333333; padding: 22px 32px; text-decoration: none; font-family: Montserrat; font-size: 18px; border-radius: 100px; letter-spacing: 0.06em; font-weight: 700;">ORDER A SETENCIL</a>
             </div>
         </div>
     </div>
-</div>
+</body>
+
+</html>
