--- a/src/index.original.html
+++ b/src/index.original.html
@@ -3,14 +3,14 @@
 
 <head>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preload" href="styles.css?v=2" as="style" />
+  <link rel="preload" href="styles.css?v=3" as="style" />
   <link rel="preload" href="assets/images/gallery/main-photo.jpg" as="image" />
-  <link rel="preload" href="draw-b4.ttf?a8uv55" as="font" type="font/ttf" crossorigin="anonymous" />
+  <link rel="preload" href="ux-stencil.ttf?a8uv55" as="font" type="font/ttf" crossorigin="anonymous" />
   <link rel="preload" href="https://fonts.gstatic.com/s/opensans/v18/mem8YaGs126MiZpBA-UFVZ0b.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
   <link rel="preload" href="https://fonts.gstatic.com/s/opensans/v18/mem5YaGs126MiZpBA-UN7rgOUuhp.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
   <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
   <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_ZpC3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-  <link rel="stylesheet" href="styles.css?v=2" defer />
+  <link rel="stylesheet" href="styles.css?v=3" defer />
   <meta charset="utf-8">
   <title>UX Stencil</title>
   <base href="/">
