Fixed typo issue.

--- a/src/assets/email-template.html
+++ b/src/assets/email-template.html
@@ -53,7 +53,7 @@
                 </p>
             </div>
             <div style="margin-top: 50px; margin-bottom: 50px;">
-                <a href="http://ux-stencil.net#order-block" style="color: white; background-color: #333333; padding: 22px 32px; text-decoration: none; font-family: Montserrat; font-size: 18px; border-radius: 100px; letter-spacing: 0.06em; font-weight: 700;">ORDER A SETENCIL</a>
+                <a href="http://ux-stencil.net#order-block" style="color: white; background-color: #333333; padding: 22px 32px; text-decoration: none; font-family: Montserrat; font-size: 18px; border-radius: 100px; letter-spacing: 0.06em; font-weight: 700;">ORDER A STENCIL</a>
             </div>
         </div>
     </div>
